--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
