--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "finddoc",
         "hookform",
+        "Mainheader",
+        "notf",
         "Signin"
     ],
     "WillLuke.nextjs.hasPrompted": true
