--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^6.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -21,8 +21,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
-    "next-auth": "5.0.0-beta.20",
+    "next": "^15.3.3",
+    "next-auth": "^5.0.0-beta.28",
     "nextjs-fullstack-auth": "file:",
     "react": "^18",
     "react-dom": "^18",
@@ -41,7 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.21.1",
+    "prisma": "^6.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
