--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.2",
