--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,8 +32,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -42,9 +43,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "prisma": "^6.9.0",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
