--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.428.0",
-    "next": "^15.3.3",
+    "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.28",
     "nextjs-fullstack-auth": "file:",
     "react": "^18",
@@ -41,10 +41,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.4",
     "postcss": "^8.5.6",
     "prisma": "^6.9.0",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
