--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "zod": "^3.23.8"
